--- a/onepage-template-03-tema-voce-fitness/estilo.css
+++ b/onepage-template-03-tema-voce-fitness/estilo.css
@@ -1,5 +1,4 @@
 
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
@@ -41,7 +40,7 @@ p {
   line-height: 20px;
   letter-spacing: 0.5px;
   margin: 20px 0 30px;
-  text-shadow: 0 0 10px rgba(16, 64, 74, 0.5);
+  text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
 }
 
 
@@ -88,7 +87,7 @@ a:hover {
   padding: 5px;
 }
 
-button {
+.button {
   position: relative;
   border-radius: 20px;
   border: 1px solid #4bb6b7;
@@ -104,19 +103,19 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   letter-spacing: 3px;
 }
 
-button:active {
+.button:active {
   transform: scale(0.95);
 }
 
-button:focus {
+.button:focus {
   outline: none;
 }
 
-button.ghost {
+.button.ghost {
   background-color: rgba(255, 255, 255, 0.2);
   border: 2px solid #fff;
   color: #fff;
@@ -134,18 +133,18 @@ button.ghost {
   right: 50px;
 }
 
-button.ghost i {
+.button.ghost i {
   position: absolute;
   opacity: 1;
   transition: 0.3s ease-in-out;
   z-index: 6;
 }
 
-button.ghost i.register {
+.button.ghost i.register {
   right: 70px;
 }
 
-button.ghost i.login {
+.button.ghost i.login {
   left: 70px;
 }
 
@@ -358,7 +357,7 @@ input {
   transform: translateX(-20%);
 }
 
-.container.right-panel-active .overlay-left {
+.container .right-panel-active  .overlay-left {
   transform: translateX(0);
 }
 
