--- a/onepage-template-03-tema-voce-fitness/css/style.css
+++ b/onepage-template-03-tema-voce-fitness/css/style.css
@@ -87,12 +87,25 @@
 .galeria-academia .foto .mascara    { background:rgba(0,0,0,0); transition:0.5s; position:absolute; width:100%; height:100%; left:0; bottom:0;  }
 .galeria-academia .foto .image-link { display:block; position:absolute; left:35%; bottom:25px; text-align:center;	width:40px; height:40px; line-height:40px; font-size:1.8em; background: transparent; color:#ffffff; text-decoration:none; transition:all .3s ease-in-out; opacity:0; margin-left:20px; margin-bottom:20px;  }
 
-.galeria-academia .foto   { width: 100%; float: left; display: block; margin-bottom: 5%; border: 6px #fff solid; position: relative; overflow: hidden; border-radius: 8px; }
+.galeria-academia .foto   { width: 100%; float: left; display: block; margin-bottom: 5%; border: 60px #000000 solid; position: relative; overflow: hidden; border-radius: 8px; }
 .foto:hover .image-link { bottom:20%; transition: all .3s ease-in-out; opacity:1; } 
 .foto:hover .mascara    { background: rgba(247, 119, 126, 0.69); }
 /*Termina Galeria*/
 
+/*SOBRE*/
+#conteudo {
+  background: #ad1d1d;
+  width: 1200px;
+  height: 400px;
+  display: flex;
 
+}
+#item{
+  background: #03000000;
+  border: 10px solid darkgreen;
+  margin: 10px;
+}
+/*TERMINA SOBRE*/
 
 /*Contato*/
 .section-contato          { background-color:#f9f9f9; }
