--- a/onepage-template-03-tema-voce-fitness/cadastro_estilo.css
+++ b/onepage-template-03-tema-voce-fitness/cadastro_estilo.css
@@ -48,14 +48,14 @@ body {
 
 .login-button button {
     border: none;
-    background-color: #6c63ff;
+    background-color: #2bbdce;
     padding: 0.4rem 1rem;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .login-button button:hover {
-    background-color: #6b63fff1;
+    background-color: #2bbdce;
 }
 
 .login-button button a {
@@ -69,7 +69,7 @@ body {
     display: block;
     width: 5rem;
     height: 0.3rem;
-    background-color: #6c63ff;
+    background-color: #2bbdce;
     margin: 0 auto;
     position: absolute;
     border-radius: 10px;
@@ -102,7 +102,7 @@ body {
 }
 
 .input-box input:focus-visible {
-    outline: 1px solid #6c63ff;
+    outline: 1px solid #2bbdce;
 }
 
 .input-box label,
@@ -142,14 +142,14 @@ body {
     width: 100%;
     margin-top: 2.5rem;
     border: none;
-    background-color: #6c63ff;
+    background-color: #2bbdce;
     padding: 0.62rem;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .continue-button button:hover {
-    background-color: #6b63fff1;
+    background-color: #2bbece98;
 }
 
 .continue-button button a {
