--- a/onepage-template-03-tema-voce-fitness/menu.css
+++ b/onepage-template-03-tema-voce-fitness/menu.css
@@ -3,7 +3,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: url(img/medico.jpeg) top center / cover no-repeat;
 
-  margin: 0;
+  margin: 40px;
   padding: 0;
 }
 
@@ -22,8 +22,8 @@ h1 {
 }
 
 form {
-  display: grid;
-  grid-gap: 10px;
+  margin-top: 30px;
+  padding: 30px;
 }
 
 label {
@@ -60,8 +60,9 @@ button {
   color: #fff;
   font-size: 15px;
   font-weight: 700;
-  margin: 20px;
-  padding: 12px 80px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 18px 80px;
   letter-spacing: 1px;
   text-transform: capitalize;
   transition: 0.3s ease-in-out;
@@ -78,4 +79,45 @@ button {
 
 .button:focus {
   outline: none;
+}
+
+
+
+@media screen and (max-width: 1330px) {
+  form-image {
+      display: none;
+  }
+  container {
+      width: 70%;
+  }
+  form {
+      width: 80%;
+  }
+}
+
+@media screen and (max-width: 1064px) {
+  .container {
+      width: 90%;
+      height: auto;
+  }
+  .input-group {
+      flex-direction: column;
+      z-index: 5;
+      padding-right: 5rem;
+      max-height: 10rem;
+      overflow-y: scroll;
+      flex-wrap: nowrap;
+  }
+  .gender-inputs {
+      margin-top: 2rem;
+  }
+  .gender-group {
+      flex-direction: column;
+  }
+  .gender-title h6 {
+      margin: 0;
+  }
+  .gender-input {
+      margin-top: 0.5rem;
+  }
 }
