--- a/onepage-template-03-tema-voce-fitness/css/style.css
+++ b/onepage-template-03-tema-voce-fitness/css/style.css
@@ -102,6 +102,7 @@
     z-index: 99;
   }
 
+
   .main_header_nav_item {
     float: left;
     width: 100%;
@@ -1123,3 +1124,27 @@ input[type="text"], textarea {
 /*1600PX BREAKPOINT*/
 /*1600 dividido por 16 = 100em*/
 @media (min-width:100em) {}
+
+
+
+@media (max-width:768px){
+
+    .branco{
+      display: block;
+      margin-top: 20px;
+      
+    }
+
+    .conhecaContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+    .cardsContainer{
+      
+
+    }
+
+}
+
