--- a/onepage-template-03-tema-voce-fitness/menu.css
+++ b/onepage-template-03-tema-voce-fitness/menu.css
@@ -1,9 +1,16 @@
+
+
+
+
+
+
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: url(img/medico.jpeg) top center / cover no-repeat;
 
-  margin: 40px;
+  
   padding: 0;
 }
 
@@ -83,3 +90,44 @@ button:focus {
 
 
 
+
+.main_header {
+  background: #ffffff;
+  z-index: 1;
+}
+
+.main_header .content {
+  float: left;
+  padding: 0px 0;
+}
+
+.main_header.fixed {
+  display: block;
+  position: fixed;
+  z-index: 99;
+}
+
+.main_header_logo {
+  font-size: 0;
+  float: left;
+}
+
+.main_header_logo img {
+  height: 100px;
+}
+
+.mobile_action {
+  color: #646464;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  line-height: 45px;
+  font-size: 1.8em;
+  float: right;
+  cursor: pointer;
+  margin: 30px 8px;
+}
+
+.mobile_action.active {
+  color: #f7777e;
+}
