--- a/onepage-template-03-tema-voce-fitness/estilo.css
+++ b/onepage-template-03-tema-voce-fitness/estilo.css
@@ -393,3 +393,11 @@ input {
 .social-container a:hover {
   border: 1px solid #4bb6b7;
 }
+
+@media (max-width:768px){
+
+.container{
+  width: 100%;
+}
+
+}
