--- a/onepage-template-03-tema-voce-fitness/cadastro_estilo.css
+++ b/onepage-template-03-tema-voce-fitness/cadastro_estilo.css
@@ -198,4 +198,9 @@ body {
     .gender-input {
         margin-top: 0.5rem;
     }
+} 
+@media(max-width: 768px) {
+    .container {
+        width: 100%;
+    }
 }
