--- a/onepage-template-03-tema-voce-fitness/menu.css
+++ b/onepage-template-03-tema-voce-fitness/menu.css
@@ -1,20 +1,18 @@
-
-
-
-
-
-
-
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: url(img/medico.jpeg) top center / cover no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
+  height: 100vh;
 }
 
 .container {
+  margin-top: 8%;
+  margin-bottom: 2%;
   width: 40%;
-  margin: auto;
-  
   background-color: #fff;
   padding: 30px;
   border-radius: 25px;
@@ -57,24 +55,20 @@ input[type="submit"]:hover {
 }
 
 button {
-  position: relative;
-  border-radius: 10px;
-  border: 1px solid #4bb6b7;
-  background-color: #4bb6b7;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 700;
-  margin-left: 100px;
-  margin-right: 50px;
-  padding: 15px 50px;
-  letter-spacing: 1px;
-  text-transform: capitalize;
-  transition: 0.3s ease-in-out;
+  border: none;
+  background-color: #2bbdce;
+  padding: 0.4rem 1rem;
+  border-radius: 5px;
   cursor: pointer;
-  list-style: none;
+  margin-top: 3%;
+  display: flexbox;
+  align-items: center;
+  justify-items: center;
 }
+
 button:hover {
   letter-spacing: 2px;
+  background-color: #69e1ee;
 }
 
 button:active {
@@ -85,6 +79,11 @@ button:focus {
   outline: none;
 }
 
+button a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #fff;
+}
 
 
 
@@ -127,4 +126,27 @@ button:focus {
 
 .mobile_action.active {
   color: #f7777e;
+}
+
+@media screen and (max-width: 1330px) {
+  .container {
+    width: 50%;
+  }
+
+  .form {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 1064px) {
+  .container {
+    width: 50%;
+    height: auto;
+  }
+}
+
+@media(max-width: 768px) {
+  .container {
+    width: 100%;
+  }
 }
