Fixed mobile drawer

--- a/onepage-template-03-tema-voce-fitness/header.css
+++ b/onepage-template-03-tema-voce-fitness/header.css
@@ -88,4 +88,54 @@ ul.main_header_nav {
         box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
         z-index: 99;
     }
+
+    .main_header_nav {
+    position: fixed;
+    left: -100%;
+    background-color: #2bbdca;
+    top: 0;
+    width: 76%;
+    min-width: 200px;
+    max-width: 360px;
+    height: 100%;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    z-index: 99;
+    }
+
+
+    .main_header_nav_item {
+    float: left;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px #55d0db solid;
+    }
+
+    .main_header_nav_item>a {
+    float: left;
+    width: 100%;
+    padding: 8px 23px;
+    font-family: 'open_sansregular';
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1em;
+    }
+
+    .main_header_nav_item:hover, .main_header_nav_item>a:hover {
+    background-color: #f3f3f3;
+    color: #f7777e;
+    }
+
+    .main_header_nav_item span {
+    width: 25px;
+    height: 25px;
+    line-height: 28px;
+    text-align: center;
+    font-size: 1.2em;
+    float: right;
+    display: block;
+    }
 }
