--- a/onepage-template-03-tema-voce-fitness/teste.css
+++ b/onepage-template-03-tema-voce-fitness/teste.css
@@ -222,18 +222,19 @@ a{
 /*SEC2 SOBRE A PSICOSOFT */
 
 .sec2{
-    
-    margin-top: 32%;
+    height: 800px;
+    margin-top: 26%;
     background-image: linear-gradient(to left, #1e464b, #2bbdce);
     display: grid;
     grid-template-columns: auto auto;
     column-gap: 50px;
     justify-content: center;
-    
+    align-items: center;
 }
 
+
 .desc1{
-    width: 700px;
+    width: 590px;
     
 }
 .desc2{
@@ -260,6 +261,7 @@ a{
 
 .pc{
     width: 100%;
+    
     
 }
 
@@ -376,4 +378,66 @@ a{
         background-color: #2bbdce;
         
         height: 300px;
+    }
+
+
+
+
+/* BEM VINDO PSICOSOFT*/
+
+    .sec4{
+        display: flex;
+        
+    }
+
+
+    .fundo_azul{
+        display: flex;
+        background-color: #2bbdce ;
+        width: 100%;
+        height: 100%;
+        margin: 110px 28px 110px 28px;
+        border-radius: 15px;
+        align-items: center;
+        justify-content: center;
+        padding: 50px;
+    }
+
+    .content1{
+        width: 80%;
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        
+    }
+
+    .bem_vindo{
+        font-size:21px ;
+        font-family: subtitulo;
+        color: white;
+        width: 35%;
+        
+        padding: 1px;
+    }
+    .p_bemvindo{
+        font-size: 32px;
+        font-family: argen;
+    }
+
+    .box_sobre{
+        margin: 20px;
+        
+        color: white;
+        width: 55%;
+        letter-spacing:1px;
+        font-family: subtitulo;
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 15px;
+    }
+
+    .box_border{
+        border: 2px solid white;
+        border-radius: 10px;
+        padding: 12px;
     }
