--- a/onepage-template-03-tema-voce-fitness/teste.css
+++ b/onepage-template-03-tema-voce-fitness/teste.css
@@ -272,7 +272,6 @@ a{
 /* SEC3 BOTOES COM TRANSITION*/
 .sec3{
     align-items: center;
-    width: 50%;
     border-bottom: #313131;
     display: grid;
     grid-template-columns: auto auto auto;
@@ -287,17 +286,17 @@ a{
 /*CARD*/
 
 .card {
-    position: relative;
+    
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 250px;
+    width: 350px;
+    height: 300px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     padding: 32px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 5px;
     background: #2bbdce;
-    border: 0.1px solid rgb(255, 255, 255);
     transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
     margin: 60px;
     }
@@ -441,3 +440,126 @@ a{
         border-radius: 10px;
         padding: 12px;
     }
+
+
+
+    /* REDES SOCIAIS */
+        ul {
+            list-style: none;
+        }
+        
+        .example-2 {
+            display: flex;
+
+            /* alinhamento no centro*/
+            justify-content: center;
+            align-items: center;
+        }
+        .example-2 .icon-content {
+            margin: 0 10px;
+            position: relative;
+        }
+        .example-2 .icon-content .tooltip {
+            position: absolute;
+            top: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: #fff;
+            padding: 6px 10px;
+            border-radius: 5px;
+            opacity: 0;
+            visibility: hidden;
+            font-size: 14px;
+            transition: all 0.3s ease;
+        }
+        .example-2 .icon-content:hover .tooltip {
+            opacity: 1;
+            visibility: visible;
+            top: -50px;
+        }
+        .example-2 .icon-content a {
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            color: #4d4d4d;
+            background-color: #fff;
+            transition: all 0.3s ease-in-out;
+        }
+        .example-2 .icon-content a:hover {
+            box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
+        }
+        .example-2 .icon-content a svg {
+            position: relative;
+            z-index: 1;
+            width: 30px;
+            height: 30px;
+        }
+        .example-2 .icon-content a:hover {
+            color: white;
+        }
+        .example-2 .icon-content a .filled {
+            position: absolute;
+            top: auto;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            background-color: #000;
+            transition: all 0.3s ease-in-out;
+        }
+        .example-2 .icon-content a:hover .filled {
+            height: 100%;
+        }
+        
+        .example-2 .icon-content a[data-social="linkedin"] .filled,
+        .example-2 .icon-content a[data-social="linkedin"] ~ .tooltip {
+            background-color: #0274b3;
+        }
+        
+        .example-2 .icon-content a[data-social="github"] .filled,
+        .example-2 .icon-content a[data-social="github"] ~ .tooltip {
+            background-color: #24262a;
+        }
+        .example-2 .icon-content a[data-social="instagram"] .filled,
+        .example-2 .icon-content a[data-social="instagram"] ~ .tooltip {
+            background: linear-gradient(
+            45deg,
+            #405de6,
+            #5b51db,
+            #b33ab4,
+            #c135b4,
+            #e1306c,
+            #fd1f1f
+            );
+        }
+        .example-2 .icon-content a[data-social="youtube"] .filled,
+        .example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
+            background-color: #ff0000;
+        }
+        
+
+
+
+
+.logo_final{
+    width: 3%;
+}    
+
+        .footer1{
+            position: inherit;
+        }
+
+        .final{
+            
+            height: 50px;
+            border-top: solid 1px rgba(139, 139, 139, 0.301);
+            color: rgba(128, 128, 128, 0.685);
+            text-align: center;
+            
+            
+        }
