--- a/onepage-template-03-tema-voce-fitness/teste.css
+++ b/onepage-template-03-tema-voce-fitness/teste.css
@@ -1002,57 +1002,172 @@ html, body {
     scroll-behavior: smooth;
 }
 
+.mobile_action {
+    color: #646464;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    line-height: 45px;
+    font-size: 1.8em;
+    float: right;
+    cursor: pointer;
+    margin: 30px 8px;
+}
+  
+.mobile_action.active {
+    color: #f7777e;
+}
+
+.icon-menu:before {
+    content: "\e500";
+}
+
+
+
+
 /* DESKTOP >=1200PX xl// 
 NOTEBOOK >=992px lg// 
 TABLET >=768px md// 
 CELULARES >=576PX sm// */
 
+/* @media (max-width: 1024px) {
+    .sec2 {
+        grid-template-columns: auto;
+        row-gap: 20px;
+    }
+    .desc1, .desc2 {
+        width: 80%;
+    }
+
+} */
+
 @media (max-width:1200px) {
 
-    .menu{
-        
-        width: 100%;
-        height: 50px;
-        
-        transition: all 0.5s ease-in-out;
-        font-size: 20px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: 600;
-        display: flex;
-        align-items: center;
-        color: #f5f5f5;
-        
+    
 
-    }
-    .menu:hover{
-        position: relative;
-        height: 60px;
-        width: 100%;
-        display: flex;
-        
-        transition: all 0.5s;
-    }
-    .menul{
-        
-        margin: 0;
-        padding: 0;
-    }
+}
 
-    .menul:hover{
-        display: flex;
-        font: 50pt;
-    }
-    .logotipo{
+
+
+@media (min-width: 48em){
+    
+}
+
+
+
+@media (min-width: 80em) {
+    .mobile_action {
         display: none;
     }
-    .subtitulo{
-        font-size: 0px;
+    .main_header_nav {
+        float: right;
+        width: auto;
+        margin-top: 23px;
+    }
+    .main_header_nav_item {
+        position: relative;
+        display: inline-block;
+        float: left;
+    }
+    .main_header_nav a.menuAtivo {
+        background-color: #2bbdce;
+        color: #ffffff;
+    
+    }
+    .main_header_nav_item>a {
+        color: #646464;
+        float: left;
+        padding: 1em 1.2em;
+        font-size: 1em;
+        font-family: 'open_sansregular';
+        text-decoration: none;
+        text-transform: uppercase;
+        border-radius: 6px;
+    }
+}
+
+
+
+
+@media (max-width: 79.9375em){
+
+    .main_header_logo {
+        background: transparent;
+        z-index: 98;
+    }
+    .main_header_nav {
         
     }
-    .texto_principal {
-        font-size: 20pt;
-        top: 40%;
+
+    .main_header_nav {
+        float: right;
+        
+        margin-top: 23px;
+        display: block;
+        padding-left: 0px;
         position: fixed;
+        left: -100%;
+        background-color: #2bbdca;
+        top: 0;
+        width: 76%;
+        min-width: 200px;
+        max-width: 360px;
+        height: 100%;
+        overflow: hidden;
+        overflow-y: auto;
+        -webkit-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+        box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+        z-index: 99;
     }
 
+    .main_header_nav {
+    position: fixed;
+    left: -100%;
+    background-color: #2bbdca;
+    top: 0;
+    width: 76%;
+    min-width: 200px;
+    max-width: 360px;
+    height: 100%;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.75);
+    z-index: 99;
+    }
+
+
+    .main_header_nav_item {
+    float: left;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px #55d0db solid;
+    }
+
+    .main_header_nav_item>a {
+    float: left;
+    width: 100%;
+    padding: 8px 23px;
+    font-family: 'open_sansregular';
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1em;
+    }
+
+    .main_header_nav_item:hover, .main_header_nav_item>a:hover {
+    background-color: #f3f3f3;
+    color: #f7777e;
+    }
+
+    .main_header_nav_item span {
+    width: 25px;
+    height: 25px;
+    line-height: 28px;
+    text-align: center;
+    font-size: 1.2em;
+    float: right;
+    display: block;
+    }
 }
