--- a/onepage-template-03-tema-voce-fitness/teste.css
+++ b/onepage-template-03-tema-voce-fitness/teste.css
@@ -292,6 +292,190 @@ a {
     z-index: 1;
 }
 
+
+/* CARD SOBRE PSICOSOFT */
+
+
+.conhecaContainer {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(0, 0, 0, 0.87);
+    width: 100%;
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    display: flex;
+    background-color: #2bbdce;
+    border-radius: .9375rem;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10.28%;
+    padding: 2.93% 3.51%;
+    margin: 20px;
+  }
+  
+  .sobrePrincipal {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: start;
+    flex-direction: column-reverse;
+    max-width: 18.75rem;
+  }
+  
+  .sobre {
+    -webkit-font-smoothing: antialiased;
+    box-sizing: inherit;
+    color: #fff;
+    font-family: DrConsultaRegular,sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: -.0625rem;
+    margin: .75rem auto;
+    text-align: left;
+    font-size: 2rem;
+    line-height: 2.49875rem;
+  }
+  .subtitulo3 {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(255, 255, 255, 0.966);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    margin-bottom: 1.25rem;
+  }
+  .cardsContainer {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    width: 100%;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    max-width: 44.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+    gap: 1rem;
+    margin: 0 auto;
+  }
+  .cardsConteudo {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    display: flex;
+    align-items: center;
+    border-radius: .5rem;
+    border: 2px solid #e5e5e5;
+    padding: .75rem;
+    margin: 0 auto;
+    max-width: 21.75rem;
+  }
+  
+  .cardTitulo{
+    -webkit-font-smoothing: antialiased;
+    box-sizing: inherit;
+    color: #fff;
+    font-family: Nunito,sans-serif;
+    font-size: .875rem;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 1.25125rem;
+    letter-spacing: .00938rem;
+    margin: 0;
+  }
+  .conhecaCartaoDrcEmpresasCard_container__FUiAg{
+    -webkit-font-smoothing: antialiased;
+    color: rgba(255, 255, 255, 0.904);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+    display: flex;
+    align-items: center;
+    border-radius: .5rem;
+    border: 2px solid #e5e5e5;
+    padding: .75rem;
+    margin: 0 auto;
+    max-width: 21.75rem;
+  }
+  .cardDescricaoConteiner{
+    -webkit-font-smoothing: antialiased;
+    color: rgba(255, 255, 255, 0.87);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+  }
+  .cardDescricao {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(255, 255, 255, 0.918);
+    font-size: 0.875rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+    box-sizing: inherit;
+  }
+  
+  #conteudo {
+    
+    background-image: linear-gradient(#2bbdce, #fff);
+    width: 1800px;
+    height: 700px;
+    display: flex;
+    margin:auto;
+    border-radius: 15PX;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.664)
+  }
+  
+  #item{
+    padding: 100px;
+    width: 1000px;
+    right: 300px;
+    
+    margin: auto;
+  
+  }
+  
+  #item {
+    background: #03000000;
+    border: 10px solid darkgreen;
+    margin: 10px;
+  }
+
+
+
+/* FIM CARD SOBRE PSICOSOFT */
+
+
 /*SEC2 SOBRE A PSICOSOFT */
 
 .sec2 {
@@ -520,6 +704,9 @@ a {
 
 .sec4 {
     display: flex;
+    justify-content: center;
+    
+
 
 }
 
@@ -773,6 +960,7 @@ ul {
 
 .footer1 {
     border-top: 0.5px solid rgba(194, 194, 194, 0.37);
+    
 }
 
 .final {
@@ -785,12 +973,14 @@ ul {
 .contatos{
     display: flex;
     margin-top: 10px;
+    color: black;
 }
 .colfooter {
     width: 300px;
     border-bottom: 1px solid rgba(88, 87, 87, 0.822);
     font-family: argen;
     padding: 50px;
+    
 }
 
 
@@ -1041,18 +1231,29 @@ CELULARES >=576PX sm// */
 
 } */
 
-@media (max-width:1200px) {
 
-    
+
+/* CARD SOBRE PSICOSOFT */
+@media (max-width:768px){
+
+    .branco{
+      display: block;
+      margin-top: 20px;
+      
+    }
+
+    .conhecaContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+    .cardsContainer{
+      
+
+    }
 
 }
-
-
-
-@media (min-width: 48em){
-    
-}
-
 
 
 @media (min-width: 80em) {
@@ -1084,6 +1285,9 @@ CELULARES >=576PX sm// */
         text-transform: uppercase;
         border-radius: 6px;
     }
+
+
+    
 }
 
 
@@ -1091,6 +1295,30 @@ CELULARES >=576PX sm// */
 
 @media (max-width: 79.9375em){
 
+
+    .texto_principal{
+        font-size: 30pt;
+        margin: 0 auto;
+    }
+
+    .subtitulo{
+        font-size: 10pt;
+        margin: 1px;
+        letter-spacing: 0px;
+    }
+
+    .conteudo{
+        display: grid;
+        grid-template-columns: auto;
+        padding: 0px;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .form{
+        display: none;
+    }
     .main_header_logo {
         background: transparent;
         z-index: 98;
@@ -1169,5 +1397,9 @@ CELULARES >=576PX sm// */
     font-size: 1.2em;
     float: right;
     display: block;
+    }
+
+    .pc{
+        width: 50%;
     }
 }
