--- a/onepage-template-03-tema-voce-fitness/teste.css
+++ b/onepage-template-03-tema-voce-fitness/teste.css
@@ -1458,3 +1458,186 @@ CELULARES >=576PX sm// */
     }
 
 }
+
+
+
+
+/* From Uiverse.io by ammarsaa */ 
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 400px;
+    
+    
+    position: relative;
+    background-color: #ffffff;
+    color: #fff;
+    border-bottom: 1px solid rgba(88, 87, 87, 0.822);
+    
+  }
+  
+  .title {
+    font-size: 28px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    color: #000000;
+    font-family: argen;
+  }
+  
+  .title::before {
+    width: 18px;
+    height: 18px;
+  }
+  
+  .title::after {
+    width: 18px;
+    height: 18px;
+    animation: pulse 1s linear infinite;
+  }
+  
+  .title::before,
+  .title::after {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    left: 0px;
+    background-color: #000000;
+  }
+  
+  .message, 
+  .signin {
+    font-size: 14.5px;
+    color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .signin {
+    text-align: center;
+  }
+  
+  .signin a:hover {
+    text-decoration: underline rgb(0, 0, 0);
+  }
+  
+  .signin a {
+    color: #000000;
+  }
+  
+  .flex {
+    display: flex;
+    width: 100%;
+    gap: 7px;
+  }
+  
+  .form label {
+    position: relative;
+    padding: 5px;
+    margin-right: 10px;
+  }
+  
+  .form label .input {
+    background-color: #2bbdca;
+    color: #ffffff;
+    width: 100%;
+    padding: 20px 05px 05px 10px;
+    outline: 0;
+    border: 1px solid rgba(105, 105, 105, 0.397);
+    border-radius: 10px;
+  }
+  
+  .form label .input + span {
+    color: rgb(255, 255, 255);
+    position: absolute;
+    left: 10px;
+    top: 0px;
+    font-size: 0.9em;
+    cursor: text;
+    transition: 0.3s ease;
+  }
+  
+  .form label .input:placeholder-shown + span {
+    top: 12.5px;
+    font-size: 0.9em;
+  }
+  
+  .form label .input:focus + span,
+  .form label .input:valid + span {
+    color: #00bfff;
+    top: 0px;
+    font-size: 0.7em;
+    font-weight: 600;
+  }
+  
+  .input {
+    font-size: medium;
+  }
+  
+  .submit {
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 16px;
+    transform: .3s ease;
+    background-color: #2bbdca;
+  }
+  
+  .submit:hover {
+    transform: .3s ease;
+    background-color: #00bfff96;
+  }
+  
+  @keyframes pulse {
+    from {
+      transform: scale(0.9);
+      opacity: 1;
+    }
+  
+    to {
+      transform: scale(1.8);
+      opacity: 0;
+    }
+  }
+
+
+
+  /*estrela*/
+
+.container1 input {
+    opacity: 0;
+    cursor: pointer;
+    height: 100;
+    width: 0;
+  }
+  
+  .container1 {
+    display: flex;
+    cursor: pointer;
+    user-select: none;
+    padding-left: 60px;
+  }
+  
+  .container1 svg {
+    
+    height: 50px;
+    width: 50px;
+    transition: all 0.3s;
+    fill: #666;
+  }
+  
+  .container1 svg:hover {
+    transform: scale(1.1);
+    fill: yellow;
+  }
+  
+  .container1 input:checked ~ svg {
+    fill: #ffeb49;
+  }
+  
